add MAVEN_OPTS